--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <td><input type="checkbox" /></td>
   </tr>
 </table>
+Ugh...I'll fix it...
 
+ACtually you can do it.
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
 <script>
